<resources>
    <string name="app_name">Water Ulkan</string>
    <string name="file_chooser_title" translatable="false">choose file</string>
    <string name="cannot_open_file_chooser_txt" translatable="false">Open file</string>
    <!--    -->
    <string name="splash_name">Load</string>
    <string name="No_internet">No internet connection!</string>
    <string name="No_internet_info">Try doing the following:</string>
    <string name="No_internet_info_1">turn off airplane mode</string>
    <string name="No_internet_info_2">check network signal strength</string>
    <string name="No_internet_info_3">turn on Wi-fi or mobile Internet</string>
</resources>