<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SplashScreen">

    <LinearLayout
        android:id="@+id/connect_info"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textColor="@color/black"
            android:text="@string/No_internet"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/No_internet_info"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/No_internet_info_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/No_internet_info_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/No_internet_info_3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/splash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <WebView
            android:id="@+id/web_api"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/splash_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splash_name"
            android:layout_marginBottom="100dp"
            android:textColor="@color/purple_700"
            android:textSize="45sp" />

    </LinearLayout>

</RelativeLayout>